# esp_compression

./: LICENSE  README.md
assets/: demo.txt  demo.txt.br
components/brotli/: CMakeLists.txt
components/brotli/common/: constants.h  context.c  context.h  dictionary.h  platform.c  platform.h  transform.h
components/brotli/dec/: bit_reader.c  bit_reader.h  decode.c  huffman.c  huffman.h  prefix.h  state.c  state.h
components/brotli/enc/: backward_references.c  backward_references.h  backward_references_hq.c  backward_references_hq.h  bit_cost.c  bit_cost.h  block_splitter.h  brotli_bit_stream.c  brotli_bit_stream.h  cluster.c  cluster.h  command.c  command.h  compress_fragment.c  compress_fragment.h  compress_fragment_two_pass.c  compress_fragment_two_pass.h  dictionary_hash.h  encode.c  encoder_dict.h  entropy_encode.c  entropy_encode.h  entropy_encode_static.h  fast_log.h  find_match_length.h  hash.h  histogram.h  literal_cost.c  literal_cost.h  memory.c  memory.h  metablock.c  metablock.h  params.h  prefix.h  quality.h  ringbuffer.h  static_dict.h  static_dict_lut.h  utf8_util.c  (+2 more)
components/brotli/include/: brotli_decode.h  brotli_encode.h  encode.h
components/brotli/tools/: brotli.c
components/miniz/: CMakeLists.txt
components/zlib/: CMakeLists.txt
components/zlib/src/: gzlib.c  gzread.c  gzwrite.c
components/zlib_utils/: CMakeLists.txt  Kconfig  zlib_utils.c
components/zlib_utils/include/: zlib_utils.h
examples/spiffs_brotli/: CMakeLists.txt  Makefile  partitions.csv
examples/spiffs_zlib/: CMakeLists.txt  Makefile
ref/: main.cpp
(+4 files in other folders)
